--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,6 +12,7 @@
   margin: 0;
   padding: 0;
   font: inherit;
+  font-family: 'Lexend', 'degular', sans-serif;
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
@@ -28,11 +29,10 @@ html:focus-within {
 html,
 body {
   height: 100%;
-  font-family: 'degular', sans-serif;
   font-weight: 400;
   font-style: normal;
   color: var(--primary);
-  font-size: 8px;
+  /* font-size: 8px; */
   line-height: 1.5;
   text-rendering: optimizeSpeed;
 }
