--- a/src/components/FilterInput/FilterInput.module.css
+++ b/src/components/FilterInput/FilterInput.module.css
@@ -2,7 +2,7 @@
   border-radius: 0;
 }
 
-.Container {
+.FilterInput {
   display: flex;
   flex: 1;
   justify-content: center;
@@ -13,7 +13,7 @@
   margin-inline: 20px;
 }
 
-.FilterAutoComplete {
+.FilterInput__AutoComplete {
   :global(.MuiInputBase-input) {
     font-size: 13px;
     font-family: 'Lexend';
