--- a/src/components/JobCard/JobCard.module.css
+++ b/src/components/JobCard/JobCard.module.css
@@ -19,7 +19,7 @@
   font-weight: 600;
   letter-spacing: 1px;
   margin-bottom: 3px;
-  color: #8b8b8b;
+  color: var(--philippineGray);
 }
 
 .JobCard__HeaderInfoRollTypeText {
