--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap');
 
+:root {
+  --gray: gray;
+  --philippineGray: #8b8b8b
+}
+
 /* Box sizing rules */
 *,
 *::before,
