chore: update readme and minor formatting

--- a/src/components/JobCard/JobCard.module.css
+++ b/src/components/JobCard/JobCard.module.css
@@ -14,6 +14,11 @@
   gap: 10px;
 }
 
+.JobCard__HeaderRowImg {
+  height: 30px;
+  width: 30px;
+}
+
 .JobCard__HeaderInfoCompanyNameText {
   font-size: 13px;
   font-weight: 600;
